# atic

./: CMakeLists.txt  README.md
include/atic/: iterables.h  list.h  node.h  stack.h  string.h  structs.h
src/: string.cc
